src/main/java/com/example/team_work_management/exception/error/StatusNotFoundException.java
package com.example.team_work_management.exception.error;

public class StatusNotFoundException extends RuntimeException{
    public StatusNotFoundException(String message){
        super(message);
    }
}
